style.css
:root {
    /* --pink: #f14e95; */
    --pink: #000;
    --bg: #0a0a0a;
    --shadow: 0 2px 2px rgb(0 0 0/0.5);
}

body {
    font-size: 1.2rem;
    font-family: 'Work Sans', sans-serif;
    min-height: 4000px;
}

.hero::before {
    content: '';
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-image: url(img/bg-prewed.jpg);
    background-size: cover;
    background-position: center;
    z-index: -1;
    filter: grayscale();
}

.hero {
    position: relative;
    min-height: 100vh;
}

.hero h1,
.hero h4,
.hero p {
    text-shadow: var(--shadow);
}

.hero h1 {
    font-family: 'Sacramento', cursive;
    font-size: 6rem;
}

.hero h4 {
    font-size: 1.6rem;
}

.hero p {
    font-size: 1.4rem;
}

.hero a {
    color: var(--pink);
    background-color: white;
    box-shadow: var(--shadow);
}

.hero a:hover {
    background-color: var(--pink);
    color: white;
}

.mynavbar {
    background-color: rgba(255, 255, 255, 0.3) !important;
    backdrop-filter: blur(4px);
}

.mynavbar .offcanvas {
    height: 100vh;
}

.mynavbar .navbar-brand,
.mynavbar .offcanvas-title {
    font-family: 'Sacramento', cursive;
    font-size: 3.2rem;
    font-weight: bold;
}

.mynavbar .nav-link {
    text-transform: uppercase;
}

.home {
    background-image: url(img/bg.png);
    background-size: cover;
    min-height: 100vh;
    margin-top: -6rem;
    padding-top: 15rem;
    padding-bottom: 5rem;
}

.home h2 {
    color: var(--pink);
    font-family: 'Sacramento';
    font-size: 5rem;
    font-weight: bold;
}

.home h3 {
    color: #444;
    font-size: 1.5rem;
    margin-bottom: 1rem;
}

.home p {
    font-size: 1.1rem;
    color: #666;
}

.home .couple {
    margin-top: 100px;
}

.home .couple h3 {
    font-family: 'Sacramento';
    font-size: 2.4rem;
    color: var(--pink);
}

.home .couple img {
    width: 100%;
}

.home .heart {
    width: 50px;
    height: 50px;
    background-color: white;
    display: flex;
    border-radius: 50%;
    box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
    position: absolute;
    left: 50%;
    transform: translateX(-50%) translateY(65px);
}

.home .heart i {
    margin: auto;
    color: var(--pink);
}

.info {
    background-color: var(--bg);
    color: white;
    padding-top: 10rem;
    padding-bottom: 8rem;
}

.info h2 {
    color: white;
    font-family: 'Sacramento';
    font-size: 5rem;
    font-weight: bold;
}

.info .alamat {
    font-size: 1.1rem;
}

.info .description {
    font-size: 1rem;
    font-weight: 300;
}

.info .card {
    background-color: rgba(255, 255, 255, 0.2) !important;
    color: white !important;
    border: 1px solid #999;
}

.info .card-header {
    border-bottom: 1px solid #999;
    text-transform: uppercase;
    letter-spacing: 0.1rem;
}

.info .card-body {
    font-size: 0.9rem;
}

.info .card-footer {
    border-top: 1px solid #999;
    font-size: 0.9rem;
    font-weight: 300;
}


/* Media Query */


/* extra large */

@media (max-width:1200px) {
    .home .heart {
        transform: translateX(-50%) translateY(45px);
    }
}


/* laptop */

@media (max-width:992px) {
    html {
        font-size: 75%;
    }
    .simply-countdown>.simply-section {
        padding: 70px;
    }
    .home .heart {
        display: none;
    }
}


/* tablet */

@media (max-width:768px) {
    html {
        font-size: 65%;
    }
    .simply-countdown>.simply-section {
        padding: 60px;
        margin: 5px;
    }
    .mynavbar .nav-link {
        font-size: 2rem;
        text-align: center;
    }
}


/* mobile phone */

@media (max-width:576px) {
    html {
        font-size: 60%;
    }
    .simply-countdown>.simply-section {
        padding: 45px;
        margin: 3px;
    }
}

